<resources>
    <string name="app_name">ELECTRICAL_CALCULATOR</string>
    <string name="coefficient_power">Coefficient power</string>
    <string name="surface">Surface</string>
    <string name="name">Name</string>
    <string name="preliminary_balance_of_request_power">Preliminary balance of request power</string>
    <string name="square_meters">m^2</string>
    <string name="add">add</string>
    <string name="total">Total:</string>
    <string name="details">Details</string>
    <string name="material">Material</string>

    <string-array name="phases">
        <item name="one_phase">1-phase</item>
        <item name="three_phases">3-phases</item>
    </string-array>

    <string-array name="material">
        <item name="copper">Cu</item>
        <item name="aluminum">Al</item>
    </string-array>

</resources>